Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.13.1
-
Fix Version/s: Qt Creator 4.14.0-beta1
-
Component/s: C/C++/Obj-C++ Support
-
Labels:None
-
Commits:023a77ea8080d3e19f530c7ea99a90d9d00667b7 (qt-creator/qt-creator/4.14)
Description
Trying to generate the individual cases for the switch in the following snippet does not work. It does however work when storing the returned value in a variable of type Tags or apparently when using a method which returns the type directly.
#include <QTaggedPointer> enum Tags {A, B}; int main() { QTaggedPointer<void *, Tags> taggy; switch(taggy.tag()) { // try to refactor this switch to complete the case statements } }